--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Education</a></li>
-						<li><a href="#four">Projects</a></li>
 						<li><a href="#three">Publications</a></li>
+						<li><a href="#four">Projects</a></li>
 						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
@@ -54,11 +54,11 @@
 								<div class="container">
 									<header class="major">
 										<h3>Welcome to My Homepage :-)</h3>
-										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
-										<i style="float: right">Martin Luther King, Jr.</i></p>
+										<!-- <p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
+										<i style="float: right">Martin Luther King, Jr.</i></p> -->
 									</header>
 <p>My name is Negar Foroutan (Persian: نگار فروتن), and I am from Iran. Currently  I am a PhD student at the School of Computer and Communication Sciences <a href="http://ic.epfl.ch/"><i>(IC)</i></a>, <a href=https://www.epfl.ch/en><i>EPFL</i></a>, 
-										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> and <a href="https://nlp.epfl.ch"><i>NLP</i></a> under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Karl Aberer</i></a> and  <a href="https://atcbosselut.github.io"><i>Antoine Bosselut</i></a>.
+										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> and <a href="https://nlp.epfl.ch"><i>NLP</i></a> labs under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Karl Aberer</i></a> and  <a href="https://atcbosselut.github.io"><i>Antoine Bosselut</i></a>.
 <br/><br/>
  I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
@@ -114,8 +114,8 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
-	<li><b><u>N. Foroutan Eghlidi</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>To appear in EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
-	<li><b><u>N. Foroutan Eghlidi</u></b>, A. Romanou, S. Massonnet, R. Lebret, and K. Aberer, "Multilingual Text Summarization on Financial Documents," <i>Proceedings of the 4th Financial Narrative Processing Workshop@ LREC</i>, 2022. (<a href="https://aclanthology.org/2022.fnp-1.7.pdf"> More Information</a>)</li><br>
+	<li><b><u>N. Foroutan</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
+	<li><b><u>N. Foroutan</u></b>, A. Romanou, S. Massonnet, R. Lebret, and K. Aberer, "Multilingual Text Summarization on Financial Documents," <i>Proceedings of the 4th Financial Narrative Processing Workshop@ LREC</i>, 2022. (<a href="https://aclanthology.org/2022.fnp-1.7.pdf"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan </u></b> and M. Jaggi, "Sparse Communication for Training Deep Networks," <i>Workshop on Beyond first-order methods in ML systems at ICML</i>, 2020. (<a href="https://arxiv.org/pdf/2009.09271.pdf"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
 	<li><b><u>N. Foroutan Eghlidi</u></b>, Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
