--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<h3>Education</h3>
 									<p>
 									<ul>
-<li> PhD in Computer & Communication Sciences<i style="float: right">2019-2023 (Expected)</i><br><a href=https://www.epfl.ch/en><i>Swiss Federal Institue of Technology in Lausanne (EPFL)</i></a>, Lausanne, Switzerland</li><br>
+<li> PhD in Computer & Communication Sciences<i style="float: right">2019-2025 (Expected)</i><br><a href=https://www.epfl.ch/en><i>Swiss Federal Institue of Technology in Lausanne (EPFL)</i></a>, Lausanne, Switzerland</li><br>
 <li> M.Sc. in Computer Engineering (Artificial Intelligence)<i style="float: right">2013-2016</i><br><a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, Shiraz, Iran <i style="float: right">Supervisor: <a href="http://shirazu.ac.ir/faculty/home/ali/en">Dr. Ali Hamzeh</a></i>
 <ul style="list-style-type:circle">
 	<!-- <li><b style="color:#008055">GPA</b> = <b>18.99</b> <b style="float: right">Ranked Second</b></li> -->
@@ -114,6 +114,7 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
+	<li>Y. Karoui, R. Lebret, <b><u>N. Foroutan</u></b>, and K. Aberer, "Stop Pre-Training: Adapt Visual-Language Models to Unseen Languages," <i>ACL</i>, 2023. (<a href="https://arxiv.org/abs/2306.16774"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, A. Romanou, S. Massonnet, R. Lebret, and K. Aberer, "Multilingual Text Summarization on Financial Documents," <i>Proceedings of the 4th Financial Narrative Processing Workshop@ LREC</i>, 2022. (<a href="https://aclanthology.org/2022.fnp-1.7.pdf"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan </u></b> and M. Jaggi, "Sparse Communication for Training Deep Networks," <i>Workshop on Beyond first-order methods in ML systems at ICML</i>, 2020. (<a href="https://arxiv.org/pdf/2009.09271.pdf"> More Information</a>)</li><br>
