--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
-	<li><b><u>N. Foroutan</u></b>, M. Banaei, Karl Aberer, and A. Bosselut, "Breaking the Language Barrier: Improving Cross-Lingual Reasoning with Structured Self-Attention," <i>EMNLP - Findings</i>, 2023. </li><br>
+	<li><b><u>N. Foroutan</u></b>, M. Banaei, Karl Aberer, and A. Bosselut, "Breaking the Language Barrier: Improving Cross-Lingual Reasoning with Structured Self-Attention," <i>EMNLP 2023 - Findings</i>. (<a href="http://arxiv.org/abs/2310.15258">More Information</a>) </li><br>
 	<li>D. Bayazit, <b><u>N. Foroutan</u></b>, Z. Chen, G. Weiss, and A. Bosselut, "Discovering Knowledge-Critical Subnetworks in Pretrained Language Models," <i>arXiv</i>, 2023. (<a href="https://arxiv.org/abs/2310.03084">More Information</a>) </li><br>
 	<li>Y. Karoui, R. Lebret, <b><u>N. Foroutan</u></b>, and K. Aberer, "Stop Pre-Training: Adapt Visual-Language Models to Unseen Languages," <i>ACL</i>, 2023. (<a href="https://arxiv.org/abs/2306.16774">More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
