--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						 <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> 
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>-->
-						<li><a href="mailto:forutan@cse.shirazu.ac.ir" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:negar.foroutan@epfl.ch" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://ir.linkedin.com/in/negarforoutan" class="icon fa-linkedin"><span class="label">LinkdIn</span></a></li>
 						<li><a href="https://github.com/negar-foroutan" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://twitter.com/negarforoutan" class="icon fa-twitter"><span class="label">GitHub</span></a></li>
