--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
+	<li>C. Fierro, <b><u>N. Foroutan</u></b>,  D. Elliott, and A. Søgaard, "How Do Multilingual Models Remember? Investigating Multilingual Factual Recall Mechanisms," <i>arXiv</i>, 2024. (<a href="https://arxiv.org/pdf/2410.14387">More Information</a>) </li><br>
+	<li>D. Bayazit, <b><u>N. Foroutan</u></b>, Z. Chen, G. Weiss, and A. Bosselut, "Discovering Knowledge-Critical Subnetworks in Pretrained Language Models," <i>EMNLP</i>, 2024. (<a href="https://arxiv.org/abs/2310.03084">More Information</a>) </li><br>
+	<li> B. Borges*, <b><u>N. Foroutan*</u></b>, D. Bayazit*, A. Sotnikova*, et. al., "Could ChatGPT get an Engineering Degree? Evaluating Higher Education Vulnerability to AI Assistants," <i>arXiv 2024 </i>. (<a href="https://arxiv.org/pdf/2408.11841">More Information</a>) </li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, Karl Aberer, and A. Bosselut, "Breaking the Language Barrier: Improving Cross-Lingual Reasoning with Structured Self-Attention," <i>EMNLP 2023 - Findings</i>. (<a href="http://arxiv.org/abs/2310.15258">More Information</a>) </li><br>
-	<li>D. Bayazit, <b><u>N. Foroutan</u></b>, Z. Chen, G. Weiss, and A. Bosselut, "Discovering Knowledge-Critical Subnetworks in Pretrained Language Models," <i>arXiv</i>, 2023. (<a href="https://arxiv.org/abs/2310.03084">More Information</a>) </li><br>
 	<li>Y. Karoui, R. Lebret, <b><u>N. Foroutan</u></b>, and K. Aberer, "Stop Pre-Training: Adapt Visual-Language Models to Unseen Languages," <i>ACL</i>, 2023. (<a href="https://arxiv.org/abs/2306.16774">More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, A. Romanou, S. Massonnet, R. Lebret, and K. Aberer, "Multilingual Text Summarization on Financial Documents," <i>Proceedings of the 4th Financial Narrative Processing Workshop@ LREC</i>, 2022. (<a href="https://aclanthology.org/2022.fnp-1.7.pdf"> More Information</a>)</li><br>
