--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<i style="float: right">Martin Luther King, Jr.</i></p> -->
 									</header>
 <p>My name is Negar Foroutan (Persian: نگار فروتن), and I am from Iran. Currently  I am a PhD student at the School of Computer and Communication Sciences <a href="http://ic.epfl.ch/"><i>(IC)</i></a>, <a href=https://www.epfl.ch/en><i>EPFL</i></a>, 
-										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> and <a href="https://nlp.epfl.ch"><i>NLP</i></a> labs under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Karl Aberer</i></a> and  <a href="https://atcbosselut.github.io"><i>Antoine Bosselut</i></a>.
+										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> and <a href="https://nlp.epfl.ch"><i>NLP</i></a> labs under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Karl Aberer</i></a> and  <a href="https://atcbosselut.github.io"><i>Antoine Bosselut</i></a>. <br/>Currently, I'm a research intern at Google.
 <br/><br/>
  I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
@@ -118,9 +118,11 @@ I am particularly interested in multilingual NLP and cross-lingual transfer, foc
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
-	<li>C. Fierro, <b><u>N. Foroutan</u></b>,  D. Elliott, and A. Søgaard, "How Do Multilingual Models Remember? Investigating Multilingual Factual Recall Mechanisms," <i>arXiv</i>, 2024. (<a href="https://arxiv.org/pdf/2410.14387">More Information</a>) </li><br>
+
+	<li>A. Romaneo, <b><u>N. Foroutan</u></b>, Anna Sotnikova, et al., "INCLUDE: Evaluating Multilingual Language Understanding with Regional Knowledge," <i>ICLR</i>, 2025. (<a href="https://arxiv.org/abs/2411.19799">More Information</a>) </li><br>
+	<li> B. Borges*, <b><u>N. Foroutan*</u></b>, D. Bayazit*, A. Sotnikova*, et. al., "Could ChatGPT get an Engineering Degree? Evaluating Higher Education Vulnerability to AI Assistants," <i>PNAS 2024 </i>. (<a href="https://www.pnas.org/doi/10.1073/pnas.2414955121">More Information</a>) </li><br>
 	<li>D. Bayazit, <b><u>N. Foroutan</u></b>, Z. Chen, G. Weiss, and A. Bosselut, "Discovering Knowledge-Critical Subnetworks in Pretrained Language Models," <i>EMNLP</i>, 2024. (<a href="https://arxiv.org/abs/2310.03084">More Information</a>) </li><br>
-	<li> B. Borges*, <b><u>N. Foroutan*</u></b>, D. Bayazit*, A. Sotnikova*, et. al., "Could ChatGPT get an Engineering Degree? Evaluating Higher Education Vulnerability to AI Assistants," <i>arXiv 2024 </i>. (<a href="https://arxiv.org/pdf/2408.11841">More Information</a>) </li><br>
+	<li>C. Fierro, <b><u>N. Foroutan</u></b>,  D. Elliott, and A. Søgaard, "How Do Multilingual Models Remember? Investigating Multilingual Factual Recall Mechanisms," <i>arXiv</i>, 2024. (<a href="https://arxiv.org/pdf/2410.14387">More Information</a>) </li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, Karl Aberer, and A. Bosselut, "Breaking the Language Barrier: Improving Cross-Lingual Reasoning with Structured Self-Attention," <i>EMNLP 2023 - Findings</i>. (<a href="http://arxiv.org/abs/2310.15258">More Information</a>) </li><br>
 	<li>Y. Karoui, R. Lebret, <b><u>N. Foroutan</u></b>, and K. Aberer, "Stop Pre-Training: Adapt Visual-Language Models to Unseen Languages," <i>ACL</i>, 2023. (<a href="https://arxiv.org/abs/2306.16774">More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
